2009-01-08  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added set_info_func, to set/reset Object Protection
	  flags. Added queries for it to get_info_func. (Used by digikam
	  already).
	* library.c: Added Canon Digital IXUS 960 IS, EOS 1000D, PowerShot
	  SX10 IS, Fuji FinePix A920, S2000HD.
	* library.c: Added Nikon D200 hidden properties.
	* config.c: Added more Nikon properties (almost of D70s properties
	  now added).

2008-12-22  Marcus Meissner  <marcus@jet.franken.de>

	* library.c,ptp.c,ptp.h: Added more Nikon properties.

2008-12-21  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Handle CR2 in Canon ObjectAdd events
	* ptp.c, config.c: More Nikon property handling

2008-12-14  Marcus Meissner  <marcus@jet.franken.de>

	* ptp.h: Found some Nikon property ids.

2008-11-27  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Got the data for the D700 and D300, included.
	  Changed nikon capture code to work with the D700 and other
	  newer Nikon DSLRs.

	* ptp.[ch]: Decode the Nikon DSLR current rotation flag.
	* ptp.h: Mark up the operation codes for Nikons.

2008-11-23  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Newer Nikon DSLRs "hide" the Nikon
	  vendor device properties, re-add them when we
	  find them missing. Reviewed with a D80 already.

	* ptp.h: Fixed Canon Capture to Card mode bug.

	* ptp.c,ptp.h: Dumper for lots of Canon properties
	  for --summary.

2008-11-05  Marcus Meissner  <marcus@jet.franken.de>

	* ptp-private.h, library.c: Move init_ptp_fs
	  out of initialization and into the routines
	  that need it.

	  This avoids loading the whole PTP fs for:
	  - configuration
	  - summary

2008-10-26  Marcus Meissner  <marcus@jet.franken.de>

	* ptp.h,ptp.c: Started adding PTP v1.1 defines.

2008-10-12  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Adjusted summary output a bit.

	* library.c: Handle "wrong parent" or "no root parent"
	  devices every time, so when we autodetect new ones