@@ -1,3 +1,11 @@
+2009-01-15  Marcus Meissner  <marcus@jet.franken.de>
+
+	* config.c: Enable viewfinder in enable capture for Powershots,
+	  so we can just --set-config capture=1 --set-config output=0
+	  or so.
+
+	* library.c: Added Nikon D90 and its hidden properties.
+
 2009-01-08  Marcus Meissner  <marcus@jet.franken.de>
 
 	* library.c: Added set_info_func, to set/reset Object Protection
